# instagram-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SAFETY_SPEC.md  pyproject.toml
src/ig_cli/: __init__.py  auth_help.txt  client.py  config.py  help.txt  helptext.py  introspection.py  main.py  output.py  runtime.py
src/ig_cli/commands/: __init__.py  auth.py  insight.py  live.py  media.py  raw.py  safety.py  story.py  user.py
src/ig_cli/safety/: __init__.py  breaker.py  errors.py  executor.py  guard.py  pacing.py  policy.py  rate_limit.py  retry.py  state.py
tests/: conftest.py  test_auth_command.py  test_client_errors.py  test_client_safety_proxy.py  test_config.py  test_insight_command.py  test_introspection.py  test_live_command.py  test_main.py  test_media_command.py  test_output.py  test_raw_command.py  test_safety_breaker.py  test_safety_executor.py  test_safety_guard.py  test_safety_policy.py  test_safety_rate_limit.py  test_safety_retry.py  test_safety_status_command.py  test_story_command.py  test_user_command.py
